# agent-tutorial

./: .gitignore  01_basic_langgraph_chatbot.ipynb  02_chat_with_pdfs_and_youtube.ipynb  02_chat_with_pdfs_and_youtube_scaffolded.ipynb  03_deepresearch.ipynb  03_deepresearch_scaffolded.ipynb  README.md  env.example  flake.nix  requirements.txt  test.py
chat_with_X_utils/: __init__.py  async_mcp_helper.py  metadata_mangement.py  print_utils.py  tool_utils.py
hello-mcp/: mcp_colab.ipynb  mcp_config.json  mcp_config_filesystem_rag.json  pyproject.toml
hello-mcp/filesystem_rag/: recursive_file_embeddings.py  server.py  server_solution.py
hello-mcp/web_resource_rag/: documents.py  loaders.py  server.py
research_output/: research_report.md
