[project]
name = "hello-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "fastmcp>=2.12.3",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "pypdf>=6.1.0",
    "watchdog>=6.0.0",
    "youtube-transcript-api>=1.2.2",
    "yt-dlp>=2025.9.5",
]
